[package]
name = "stm32h7-heartrate-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Change stm32h743zi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../embassy-stm32", features = ["defmt", "stm32h743zi", "time-driver-any", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-sync = { version = "0.4.0", path = "../embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.3.3", path = "../embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", path = "../embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.2" }
embedded-hal-async = { version = "=1.0.0-rc.2" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2", features = ["nightly"]}
libm = "0.2.8"
heapless = { version = "0.8", default-features = false }
ringbuffer = { version = "0.15", default-features = false } # no_std

stats = { path="stats" }
time_stats = { path="time_stats" }
